--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -11,4 +11,4 @@ virtio-drivers = "0.1.0"
 opensbi-rt = { git = "https://github.com/rcore-os/riscv-sbi-rt", branch = "old"}
 lazy_static = { version = "1.4", features = ["spin_no_std"] }
 log = "0.4"
-lose-net-stack = { path = "../" }
+lose-net-stack = { path = "../", features = ["log"]}
