try to add close feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "lose-net-stack"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [
+    ".",
+    "example"
+]
+
 [features]
 log = ["dep:log"]
 
