--- a/example/.cargo/config
+++ b/example/.cargo/config
@@ -5,5 +5,5 @@ target = "riscv64imac-unknown-none-elf"
 # 使用我们的 linker script 来进行链接
 [target.riscv64imac-unknown-none-elf]
 rustflags = [
-    "-Clink-arg=-Tsrc/linker.ld",
+    "-Clink-arg=-Texample/src/linker.ld",
 ]
