--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ log = ["dep:log"]
 [dependencies]
 log = { version = "0.4", optional = true }
 bitflags = "1.3.2"
+spin = "0.9.8"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
