--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
 	"rust-analyzer.checkOnSave.extraArgs": [
 		"--target",
 		"riscv64imac-unknown-none-elf"
+	],
+	"rust-analyzer.linkedProjects": [
+		"./example/Cargo.toml"
 	]
 }
