--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,6 @@ name = "lose-net-stack"
 version = "0.1.0"
 edition = "2021"
 
-[workspace]
-members = [
-    ".",
-    "example/"
-]
-
 [features]
 log = ["dep:log"]
 
@@ -16,5 +10,13 @@ log = ["dep:log"]
 log = { version = "0.4", optional = true }
 bitflags = "1.3.2"
 spin = "0.9.8"
+num_enum = { version = "0.6.1", default-features = false}
+
+[workspace]
+members = [
+    # ".",
+    "example"
+]
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
