--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,15 @@ log = ["dep:log"]
 
 [dependencies]
 log = { version = "0.4", optional = true }
-bitflags = "1.3.2"
+bitflags = "2.4"
 spin = "0.9.8"
 num_enum = { version = "0.6.1", default-features = false}
 
-[workspace]
-members = [
-    # ".",
-    "example"
-]
+# [workspace]
+# members = [
+#     # ".",
+#     "example"
+# ]
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
